<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/followers"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="My wallet"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="25dp"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="350dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_settings" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/contentManagement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:background="@color/teal_200"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/topBar">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/title_Content"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="66dp"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif-light"
            android:text="My NFTs"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="52dp"
            android:layout_height="45dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/files" />

        <Button
            android:id="@+id/create_NFT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="60dp"
            android:text="@string/createNFTButton"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/balanceManagement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:background="@color/followingBg"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/contentManagement"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="100dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/title_Balance"
            android:textColor="@color/white"
            android:textSize="28sp" />
        <TextView
            android:id="@+id/curr_balance"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="100sp"
            android:layout_marginTop="70dp"
            android:fontFamily="sans-serif-light"
            android:lines="2"
            android:text="@string/CurrBalText"
            android:textColor="@color/address"
            android:textSize="18sp" />

        <Button
            android:id="@+id/add_coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="265dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="60dp"
            android:text="@string/AddCoinsButton"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/subtract_coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="50dp"
            android:text="Subtract coins"
            android:textSize="10dp" />



        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="110sp"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/curr_bal"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grad"
        android:paddingBottom="43dp"
        app:layout_constraintTop_toBottomOf="@+id/balanceManagement">


        <TextView
            android:id="@+id/tv_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="13dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/title_Identity"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/myname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="120sp"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/user"
            android:textColor="@color/address"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="120sp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="40sp"
            android:fontFamily="sans-serif-light"
            android:text="@string/Example_publick_key"
            android:textColor="@color/white"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/publickkey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="130dp"
            android:fontFamily="sans-serif-light"
            android:text="Public key:"
            android:textColor="@color/address"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="50dp"
            android:text="@string/buttonVerifyIdentity"
            android:textSize="10sp"
            tools:ignore="SmallSp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:background="@color/followers"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="623dp"
        app:layout_constraintTop_toBottomOf="@+id/rellay1">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/marketplace_link"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="42dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/search"
            android:contentDescription="@string/search_icon_description" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
